--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <header>
-        <nav lang="en" href="">WebStudio</nav>
+        <nav>
+            <a lang="en" href="">WebStudio</a>
+        </nav>
         <ul>
             <li>Студия</li>
             <li>Портфолио</li>
@@ -26,12 +28,12 @@
         </ul>
     </header>
 
-    <p>
+
     <h1>Эффективные решения для вашего бизнеса</h1>
     <button type="button">
         Заказать услугу
     </button>
-    </p>
+
 
     <mail>
         <ul>
